# jupyter-pgweb-proxy

./: .dockerignore  .editorconfig  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: dev.yml  publish.yml
setup/: Dockerfile  config_system.py  jupyter_notebook_config.py
src/jupyter_pgweb_proxy/: __init__.py  jupyter_config.py
